findbar overflow fix

--- a/src/findbar.css
+++ b/src/findbar.css
@@ -3,6 +3,8 @@ BODY, HTML {
 	padding:0;
 	background:var(--background);
 	text-align: left;
+	overflow-x: hidden;
+	white-space: nowrap;
 }
 
 #findbar {
